--- a/css/style.css
+++ b/css/style.css
@@ -80,7 +80,8 @@
     aside {
         grid-area: publi;
         background-color: tomato;
-        height: 50px;
+        height: 350px;
+        margin-top: 30px;
     }
     footer {
         grid-area: footer;
